--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -63,7 +63,7 @@ block content
               .instruments-card__section-panel.margin-top.margin-top--md 
                 .loyalty-card.loyalty-card--small
                   .loyalty-card__icon 
-                    +warning-svg
+                    +warning-svg.loyalty-card__svg
                   .loyalty-card__content 
                     .loyalty-card__title 
                       |Для юридических лиц действует программа лояльности.
