--- a/src/assets/styles/modules/button.scss
+++ b/src/assets/styles/modules/button.scss
@@ -22,4 +22,15 @@
   &--wide {
     width: 100%;
   }
+
+  &--small {
+    padding: 8px 0;
+    width: 160px;
+    @include fsl(14px, 140%);
+  }
+
+  &--white {
+    background: $color-white;
+    color: $color-black;
+  }
 }
