--- a/src/views/pages/profile.pug
+++ b/src/views/pages/profile.pug
@@ -6,6 +6,44 @@ include ../components/accordion
 include ../components/model-tabs
 
 block content 
+  - 
+    var ddata = [
+      {
+        type: 'email',
+        label: 'Email',
+        value: 'ksh@cloudmill.ru',
+      },
+      {
+        type: 'text',
+        label: 'Название компании',
+        value: 'Интерактивное агенство КМ',
+      },
+      {
+        type: 'password',
+        label: 'Пароль',
+        value: 'zxcqwerty123',
+      },
+      {
+        type: 'text',
+        label: 'ИНН',
+        value: '789746513',
+      },
+      {
+        type: 'password',
+        label: 'Пароль еще раз',
+        value: 'zxcqwerty123',
+      },
+      {
+        type: 'text',
+        label: 'Телефон',
+        value: '+7 (911) 286-25-63',
+      },
+      {
+        type: 'text',
+        label: 'Имя',
+        value: 'Кирилл',
+      },
+    ]
   .profile-page.main-page
     section.section.section--first 
       .container 
@@ -42,7 +80,7 @@ block content
                     |Интернет-магазин
                   .main-page__media-text 
                     |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
-            section.section 
+            .section 
               .profile-page__accordion 
                 .profile-page__accordion-col
                   .profile-page__accordion-label 
@@ -60,3 +98,66 @@ block content
                 - for (i = 0; i < 3; i++)
                   li.profile-page__accordion-item
                     +accordion
+            .section
+              .profile-page__row 
+                .profile-page__col
+                  .profile-page__panel 
+                    .profile-page__panel-label 
+                      |Ваш статус
+                    .profile-page__panel-title 
+                      |Уровен цен 2
+                    .profile-page__panel-label 
+                      |Текущий размер скидки
+                    .profile-page__panel-discont  
+                      .discont 
+                        .discont__text 
+                          |10%
+                .profile-page__col
+                  .profile-page__info 
+                    .profile-page__info-title 
+                      |Что такое уровни цен
+                    p.profile-page__info-text
+                      |Для каждого клиента у нас разработа система лояльности. #[br] Она зависит от оборота. Чем больше вы заказываете у нас, тем выше ваша скидка.
+                    p.profile-page__info-text.margin-top.margin-top--md
+                      |Чтобы узнать подробные условия работы, свяжитесь с нами.
+                    .profile-page__info-contacts 
+                      .profile-page__info-col
+                        a.profile-page__info-link(href="tel:88126006098")  
+                          |8 812 600-60-98
+                        a.profile-page__info-link(href="mailto:irlen@irlen.ru")  
+                          |irlen@irlen.ru
+                      .profile-page__info-col
+                        .profile-page__info-label 
+                          |Время работы
+                        .profile-page__info-time 
+                          |09:00 — 17:00
+            .section 
+              .profile-page__form 
+                .profile-page__form-col
+                  form.form.form--disabled(action="/" data-form='') 
+                    .profile-page__form-grid 
+                      each item in ddata
+                        .profile-page__form-item
+                          .profile-page__form-label 
+                            |#{item.label}
+                          input.form__input(type=item.type value = item.value)
+                    .profile-page__buttons
+                      .profile-page__button(data-change-button='')
+                        .profile-page__icon 
+                          +change-svg
+                        .profile-page__text 
+                          |Изменить
+                      .profile-page__form-buttons
+                        .profile-page__form-btn
+                          .button.button--small.button--white(data-cancel-button='') 
+                            |Отменить
+                        .profile-page__form-btn(data-save-button='')
+                          .button.button--small
+                            |Сохранить
+                .profile-page__form-col
+                  .loyalty-card.loyalty-card--small
+                    .loyalty-card__icon.loyalty-card__icon--start
+                      +warning-svg.loyalty-card__svg
+                    .loyalty-card__content 
+                      .loyalty-card__text 
+                        |Для смены название компании или ИНН позвоните по телефону: #[br] #[a.loyalty-card__link(href="tel:8 800 444-60-98") 8 800 444-60-98]
