--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -61,5 +61,5 @@ mixin header
                   +cart-svg
                 .header__cart-count 
                   |5
-              a.header__user(href="#") 
+              .header__user(data-fancy-button='1')
                 +user-svg
