--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -1,5 +1,6 @@
 include ../components/header
 include ../components/footer
+include ../components/modals
 
 include ../components/svg
 
@@ -30,5 +31,7 @@ html(lang='en')
 
       block footer
         +footer
+    
+    +login-modal
 
     block scripts
