--- a/src/assets/styles/modules/form.scss
+++ b/src/assets/styles/modules/form.scss
@@ -14,6 +14,17 @@
     }
   }
 
+  // &__title {
+  //   text-align: center;
+  // }
+
+  &__item {
+
+    &:not(:first-child) {
+      margin-top: 20px;
+    }
+  }
+
   &__input {
     padding: 15px 12px;
     width: 100%;
