--- a/src/assets/styles/pages/docs-page.scss
+++ b/src/assets/styles/pages/docs-page.scss
@@ -6,6 +6,14 @@
     align-items: center;
   }
 
+  &__col {
+
+    &:nth-child(2) {
+      flex-shrink: 0;
+      width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+    }
+  }
+
   &__title {
     margin-bottom: 20px;
   }
@@ -17,5 +25,14 @@
   &__image {
     max-width: 135px;
     display: block;
+  }
+
+  &__selects {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__selects-item {
+    flex-shrink: 0;
+    width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
   }
 }
