--- a/src/assets/styles/modules/model-tabs.scss
+++ b/src/assets/styles/modules/model-tabs.scss
@@ -12,7 +12,7 @@
       margin-left: 24px;
     }
 
-    &--active {
+    &.active {
       color: $color-blue;
       border-color: $color-blue;
     }
