--- a/src/views/components/model-tabs.pug
+++ b/src/views/components/model-tabs.pug
@@ -1,6 +1,6 @@
 mixin model-tabs 
-  .model-tabs 
+  .model-tabs(data-tabs='')
     each item, index in attributes.items
-      .model-tabs__item(class=(index === 0 ? 'model-tabs__item--active' : ''))
+      .model-tabs__item(class=(index === 0 ? 'active' : '') data-tabs-item='')
         |#{item}
     
