--- a/src/assets/styles/modules/tabs.scss
+++ b/src/assets/styles/modules/tabs.scss
@@ -18,7 +18,7 @@
         margin-top: 4px;
       }
 
-      &--active {
+      &.active {
         background: $color-blue;
       }
     }
@@ -31,7 +31,7 @@
     border-radius: 4px;
     cursor: pointer;
 
-    &--active {
+    &.active {
       background: $color-blue;
       color: $color-white;
     }
