--- a/src/views/pages/main.pug
+++ b/src/views/pages/main.pug
@@ -23,7 +23,7 @@ block content
               .main-page__media-icon 
                 +big-arrow-svg
             .main-page__media-content 
-              .main-page__media-title 
+              .main-page__media-title(style="font-weight: 500") 
                 |Интернет-магазин
               .main-page__media-text 
                 |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
