--- a/src/assets/styles/modules/panel.scss
+++ b/src/assets/styles/modules/panel.scss
@@ -1,32 +1,30 @@
 .panel {
   $comp: &;
 
-  padding: 20px;
-
   display: flex;
 
   background: $color-white;
   border-radius: 4px;
-
-  &--big {
-    #{$comp}__col {
-
-      &:nth-child(2) {
-        width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
-      }
-    }
-  } 
+  overflow: hidden;
 
   &__col {
     flex-shrink: 0;
     &:nth-child(1) {
-      width: calc(#{$col-part-d} * 2);
+      width: calc(#{$col-part-d} * 3);
     }
     &:nth-child(2) {
-      width: calc(#{$col-part-d} * 3 - #{$col-gap-d});
+      padding: 20px 0;
+      width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
     }
     &:nth-child(3) {
+      padding: 20px 20px 20px 0;
       margin-left: auto;
     }
+  }
+
+  &__container {
+    max-width: 280px;
+    display: flex;
+    align-items: center;
   }
 }
