--- a/src/views/components/navigation.pug
+++ b/src/views/components/navigation.pug
@@ -11,5 +11,5 @@ mixin navigation
     li.breadcrumbs__item 
       .breadcrumbs__text 
         |#{attributes.page}
-  h1 
+  h1.nav-title
     |#{attributes.page}
