--- a/src/views/pages/equip-card.pug
+++ b/src/views/pages/equip-card.pug
@@ -37,6 +37,9 @@ block content
                     |Производитель
                   .instruments-card__section-text 
                     |Leadwell
+                .instruments-card__section-item 
+                  +button.button--small.button--outline.button--white
+                    |Возможные опции
             .equip-detail__panel 
               .equip-detail__panel-row 
                 .equip-detail__panel-col
