--- a/src/views/pages/equip-cat.pug
+++ b/src/views/pages/equip-cat.pug
@@ -13,9 +13,10 @@ block content
         +navigation(items=['Оборудование', 'Токарные станки с ЧПУ'] page='Токарные станки с ЧПУ с направляющими качения ')
     section.section
       .container 
-        .panel.panel--big
+        .panel
           .panel__col
-            img(src="assets/images/equip-card-1.jpg", alt="")
+            .panel__container
+              img(src="assets/images/equip-card-1.jpg", alt="")
           .panel__col
             .panel__text 
               |Токарные станки с ЧПУ на направляющих качения с максимальной частотой вращения шпинделя 6000 об/мин и возможностью установки фрезерного привода. Длинные заготовки возможно обрабатывать, используя заднюю бабку, поджимая автоматическим задним центром, также возможна обработка длинных валов, как в ручном, так и в автоматическом люнете.
