--- a/src/views/pages/instruments.pug
+++ b/src/views/pages/instruments.pug
@@ -23,6 +23,7 @@ block content
             - for (j = 0; j < 10; j++)
               a.instruments-page__card(href="#") 
                 .instruments-page__card-container 
+                  img(src="assets/images/instrument-1.jpg", alt="")
                   .arrow-icon
                     +big-arrow-svg.arrow-icon__svg 
                 .instruments-page__card-title 
