--- a/src/views/pages/main.pug
+++ b/src/views/pages/main.pug
@@ -23,7 +23,7 @@ block content
               .main-page__media-icon 
                 +big-arrow-svg
             .main-page__media-content 
-              .main-page__media-title(style="font-weight: 500") 
+              .main-page__media-title
                 |Интернет-магазин
               .main-page__media-text 
                 |Режущий инструмент, вспомогательный инструмент, аксессуары для инструмента и приспособления
@@ -67,7 +67,7 @@ block content
                     |Большой склад запасных частей для ленточнопильных станков Cosen и станков с ЧПУ в Санкт-Петербурге
     section.main-page__section 
       .container 
-        h3.main-page__section-title 
+        .main-page__section-title 
           |Акции и скидки на инструмент
         ul.main-page__section-list
           - for (i = 0; i < 3; i++)
@@ -87,7 +87,7 @@ block content
         a.main-page__link(href="#") 
           .main-page__link-col
             .main-page__link-container 
-              h3.main-page__link-title 
+              .main-page__link-title 
                 |Материалы для скачивания
               p.main-page__link-text 
                 |Каталоги, буклеты, методички
