--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -33,9 +33,9 @@ img {
   max-height: 100%;
 }
 
-// h1, h2, h3, h4, h5 {
-//   font-weight: 500;
-// }
+h1, h2, h3, h4, h5 {
+  font-weight: 500;
+}
 
 h1 {
   @include fsl(40px, 100%);
