--- a/src/assets/styles/modules/footer.scss
+++ b/src/assets/styles/modules/footer.scss
@@ -26,6 +26,7 @@
     margin-bottom: 20px;
 
     @include fsl(18px, 100%);
+    font-weight: 500;
   }
 
   &__list {}
@@ -57,6 +58,7 @@
   }
   &__contacts-link {
     @include fsl(16px, 140%);
+    font-weight: 500;
   }
   &__contacts-label {
     @include fsl(14px, 140%);
