--- a/src/assets/styles/modules/model-tabs.scss
+++ b/src/assets/styles/modules/model-tabs.scss
@@ -7,6 +7,7 @@
     border-bottom: 1px solid transparent;
     transition: $transition;
     cursor: pointer;
+    font-weight: 500;
 
     &:not(:first-child) {
       margin-left: 24px;
