--- a/src/assets/styles/pages/instruments-page.scss
+++ b/src/assets/styles/pages/instruments-page.scss
@@ -44,6 +44,7 @@
   }
   &__tabs-text {
     @include fsl(14px, 140%);
+    font-weight: 500;
     transition: $transition;
   }
 
@@ -61,10 +62,11 @@
     position: relative;
     z-index: 0;
 
-    height: 180px;
+    display: flex;
+    align-items: center;
 
-    background: $color-white;
     border-radius: 4px;
+    overflow: hidden;
   }
   &__card-icon {
     position: absolute;
@@ -79,6 +81,7 @@
   &__card-title {
     margin-top: 12px;
     @include fsl(18px, 120%);
+    font-weight: 500;
   }
   &__card-text {
     margin-top: 8px;
