--- a/src/views/pages/instruments-detail.pug
+++ b/src/views/pages/instruments-detail.pug
@@ -15,6 +15,8 @@ block content
       .container 
         .panel
           .panel__col
+            .panel__container
+              img(src="assets/images/instrument-1.jpg", alt="")
           .panel__col
             .panel__text 
               |Твердосплавные пластины наиболее универсальны в использовании
