--- a/src/views/pages/instruments-detail.pug
+++ b/src/views/pages/instruments-detail.pug
@@ -26,7 +26,7 @@ block content
         .section__block 
           .section__row 
             .section__col
-              +aside(range=true)
+              +aside(range=true clear=true)
             .section__col
               .instruments-page__container 
                 - for (i = 0; i < 12; i++)
