--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -72,3 +72,13 @@ a {
 address {
   font-style: normal;
 }
+
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+}
