--- a/src/assets/styles/modules/tabs.scss
+++ b/src/assets/styles/modules/tabs.scss
@@ -32,10 +32,18 @@
     border-radius: 4px;
     cursor: pointer;
     font-weight: 500;
-    
+
     &.active {
       background: $color-blue;
       color: $color-white;
     }
+  }
+}
+
+.tabs-block {
+  display: none;
+
+  &.active {
+    display: block;
   }
 }
