--- a/src/assets/styles/modules/modals.scss
+++ b/src/assets/styles/modules/modals.scss
@@ -18,6 +18,14 @@
     display: flex;
     justify-content: center;
   }
+
+  &__form {
+    display: none;
+
+    &.active {
+      display: block;
+    }
+  }
 }
 
 .docs-modal {
