--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -1,7 +1,7 @@
 mixin header
   .header 
     .header__inner 
-      .header__logo 
+      a.header__logo(href="#")  
         +logo-svg 
       .header__body 
         .header__top
