--- a/src/views/pages/instruments.pug
+++ b/src/views/pages/instruments.pug
@@ -9,10 +9,10 @@ block content
         +navigation(page = 'Инструменты')
     section.section 
       .container 
-        .instruments-page__tabs
+        .instruments-page__tabs(data-tabs='')
           each item, i in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Приспособления', 'Аксессуары для инструмента']
-            .instruments-page__tabs-item(class=(i === 0 ? 'instruments-page__tabs-item--active' : ''))
-              .instruments-page__tabs-text 
+            .instruments-page__tabs-item(class=(i === 0 ? 'active' : '') data-tabs-item='' )
+              .instruments-page__tabs-text(class=(i === 2 || i === 3 ? "instruments-page__tabs-text--wide" : '')) 
                 |#{item}
     each item, i in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Аксессуары для инструмента', ]
       section.section(class=(i === 4 ? 'section--last' : ''))
