--- a/src/assets/styles/modules/range.scss
+++ b/src/assets/styles/modules/range.scss
@@ -49,6 +49,11 @@
     border: 2px solid $color-light-gray;
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+
+    &::before,
+    &::after {
+      display: none;
+    }
   }
   .noUi-target {
     height: 10px;
