--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -36,7 +36,7 @@ mixin footer
           ul.footer__contacts
             each item in data.contacts 
               li.footer__contacts-item 
-                a.footer__contacts-link(href="#") 
+                a.footer__contacts-link(href="tel:" + item.phone) 
                   |#{item.phone}
                 .footer__contacts-label 
                   |#{item.city}
