--- a/src/views/pages/equip-card.pug
+++ b/src/views/pages/equip-card.pug
@@ -38,7 +38,7 @@ block content
                   .instruments-card__section-text 
                     |Leadwell
                 .instruments-card__section-item 
-                  +button.button--small.button--outline.button--white
+                  +button.button--small.button--outline.button--lg.button--white
                     |Возможные опции
             .equip-detail__panel 
               .equip-detail__panel-row 
